fix: improve the text size on smaller viewports

--- a/src/components/ImageHeader/ImageHeader.module.scss
+++ b/src/components/ImageHeader/ImageHeader.module.scss
@@ -11,7 +11,7 @@
 }
 
 .pageHeader {
-  font-size: clamp(5rem, 5vw, 7rem);
+  font-size: clamp(3rem, 6vw, 7rem);
   font-family: "AlegreyaSans", sans-serif;
   letter-spacing: 0.4rem;
   margin-top: -5vw;
@@ -25,7 +25,7 @@
 }
 
 .pageName {
-  font-size: clamp(3rem, 2.5vw, 4.5rem);
+  font-size: clamp(2rem, 4vw, 4.5rem);
   font-family: "AlegreyaSans", sans-serif;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: hsla(0, 0%, 100%, 0.66);
